[package]
name = "jaesve"
version = "1.2.6"
authors = ["Baz <github(a)luxolus.com>"]
description = "A CLI utility for stream converting JSON objects to a series of CSV values"
edition = "2018"

readme = "README.md"
keywords = ["json", "csv", "convert", "stream"]
categories = ["command-line-utilities"]
license = "MIT"

repository = "https://github.com/bazaah/jaesve"
documentation = "https://github.com/bazaah/jaesve"
homepage = "https://github.com/bazaah/jaesve"

[profile.release]
lto = true

[dependencies]
serde = "1.0.98"
serde_json = "1.0.34"
clap = "2.32.0"
regex = "1"
simplelog = "0.6.0"
log = "0.4.8"
lazy_static = "1.3.0"
linereader = "0.3.0"
fnv = "1.0.6"

[dev-dependencies]
itertools = "0.8.0"