[package]
name = "jaesve"
version = "1.3.4"
authors = ["Baz <github(a)luxolus.com>"]
description = "A CLI utility for stream converting JSON objects to a series of CSV values"
edition = "2018"

readme = "README.md"
keywords = ["json", "csv", "convert", "stream"]
categories = ["command-line-utilities"]
license = "MIT"

repository = "https://github.com/bazaah/jaesve"
documentation = "https://github.com/bazaah/jaesve"
homepage = "https://github.com/bazaah/jaesve"

[features]
# Enables the use of config files for setting many of the available CLI options
# Note that enabling this will moderately slow complilation times and increase
# the binary's size
#
# The program will check for $HOME/jaesve.conf, $CONFIG/jaesve.conf, and /etc/jaesve.conf (*nix only)
# And expects data to be in TOML format
config-file = ["serde", "toml", "dirs"]


[dependencies]
serde_json = "1.0.34"
clap = "2.32.0"
regex = "1.3.1"
simplelog = "0.6.0"
log = "0.4.8"
lazy_static = "1.3.0"
linereader = "0.3.0"
fnv = "1.0.6"
flate2 = "1.0.13"

toml = { version = "0.5.3", optional = true }
serde = { version = "1.0.101", features = ["derive"], optional = true }
dirs = { version = "2.0.2", optional = true }

[dev-dependencies]
itertools = "0.8.0"

[profile.release]
lto = true

[badges]
azure-devops = { project = "bazaah/jaesve", pipeline = "jaesve" }
maintenance = { status = "passively-maintained" }
is-it-maintained-open-issues = { repository = "bazaah/jaesve" }